# diffdates

./: .pre-commit-config.yaml  pyproject.toml
diffdates/: main.py
