[tool.poetry]
name = "diffdates"
version = "1.0.1"
description = "A command line utility to get the difference between two dates in a given input line."
authors = ["Nick Rushton <rushton.nicholas@gmail.com>"]
license = "GNU GPLv3"
packages=[
    {include = "diffdates"}
]

[tool.poetry.scripts]
diffdates='diffdates.main:main'

[tool.poetry.dependencies]
python = "^3.8"
ciso8601 = "^2.1.3"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
mypy = "^0.910"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
